# idris-lua

./: .gitignore  README.md  idris-lua.cabal
rts/: bigint.lua  rts.lua
src/: Main.hs
src/IRTS/: CodegenLua.hs
